@@ -6,6 +6,10 @@
 	the linkage and the min/max/etc for the other end of the linkage will be
 	recalculated automatically.
 
+	* src/axis.h src/axis.c src/boundary.c src/graph3d.c:  Replace
+	AXIS_SETSCALE(AXIS_INDEX, ) and axis_set_graphical_range(AXIS_INDEX, )
+	with a single combined routine axis_set_scale_and_range(AXIS *, ).
+
 2016-03-07  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* term/tkcanvas.trm src/win/wgnuplot.mnu:  Typos.
